<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:padding="10dip">
	<TextView android:layout_height="wrap_content" android:id="@+id/textoInsertarNota"
		android:textColor="@color/green" android:layout_width="fill_parent"
		android:text="@string/insertarNota" android:textSize="20dip" />
	<Button android:layout_height="wrap_content" android:text="@string/nuevaNota"
		android:drawableRight="@android:drawable/ic_input_add"
		android:layout_below="@id/textoInsertarNota" android:layout_width="wrap_content" />
	<Button android:layout_height="wrap_content" android:text="@string/salir"
		android:layout_width="wrap_content" android:layout_below="@+id/textoInsertarNota"
		android:layout_alignRight="@+id/textoInsertarNota"></Button>
</RelativeLayout>
